# GALFITools

./: .coveragerc  .gitignore  .readthedocs.yaml  AUTHORS.rst  BorderMask.py  BorderMask2.py  CHANGELOG.rst  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  EllipSectGalfit.py  Ellipse.md  GalfitSky.py  GetK.pl  LICENSE.txt  MakeMask.py  MakeSim.py  MaskBox.py  MaskDs9.py  MaskSky.py  README.md  README.rst  SbProf.py  Sky.py  default.sex  fillpoly.py  galfitsky.py  getBreak.py  getFWHM.py  getKappa.py  getN.py  getReComp.py  getReCompAng.py  getSlope.py  getStar.py  initgal.py  mge2galfit.py  mge2galfitregu.py  mge2psf.py  polyfit.py  (+8 more)
.github/workflows/: draft-pdf.yml  publish-pypi.yml  run-test.yml
Ellipse/: EllipSectGalfit.py  Ellipse.md
Masks/: MakeMask.md
docs/: BorderMask.md  Ellipse.md  GalfitSky.md  GetK.md  InitGal.md  MakeSim.md  MaskBox.md  README.INSTALL  api.rst  concepts.rst  conf.py  howto.rst  index.rst  requirements.txt  sbprof.md  statement.rst  usage.rst
galfitools/config/: sex.param
galfitools/galin/: MaskSky.py  initgal.py  xy2fits.py
galfitools/galout/: SbProf.py  getBreak.py  getFWHM.py  getKappa.py
galfitools/mge/: mge2galfit.py
galfitools/sim/: MakeSim.py
img/: galfit.01
paper/: paper.bib  paper.md
src/galfitools/: __init__.py
src/galfitools/batch/: batchGetBT.py  batchGetBarSize.py  batchGetBreak.py  batchGetKappa.py  batchGetMeRad.py  batchGetN.py  batchGetReComp.py  batchGetSlope.py  batchSersic2Ferrer.py  batch_galfit.py
src/galfitools/desi/: central_ellipse.py  decam2sdss.py  download_legacy_products.py  get_seg_value.py  megamask.py  transform_ds9_ellipse.py
src/galfitools/galin/: MakeMask.py  MakePSF.py  MaskBox.py  MaskDs9.py  MaskEllip.py  MaskSky.py  bestInputParam.py  checkGalFile.py  common.py  exp2edge.py  galfit.py  getBoxSizeDs9.py  getInputBand.py  getSersic.py  getStar.py  imarith.py  initgal.py  printInfo.py  sersic2ferrer.py  std.py  supermask.py  tosersic.py  xy2fits.py
src/galfitools/galout/: PhotDs9.py  SbProf.py  average_fitlog.py  batch_galfit.py  clean_fitlog.py  fitlog2csv.py  galfit_stats_to_csv.py  galfit_table_corrector.py  getBT.py  getBarSize.py  getBreak.py  getCOW.py  getCOWds9.py  getChiNu.py  getFWHM.py  getKappa.py  getMeRad.py  getMissingLight.py  getN.py  getNds9.py  getPeak.py  getRads.py  getReComp.py  getSlope.py  getSlopeDat.py  getrads.py  magcorr.py  magedgedisk.py  magferrer.py  rads.py  showcube.py  splderiv.py  split_components.py  split_galfit_output.py
src/galfitools/mge/: SbProf.py  getSlopeDat.py  mge1d.py  mge2galfit.py  mgeNuk.py  sersic2mge.py
src/galfitools/shell/: commands.py  commands_batch.py  commands_galin.py  commands_galout.py  commands_mge.py  commands_sim.py  commands_sky.py  prt.py
src/galfitools/sim/: MakeSim.py  create_galfit_mocks.py  create_galfit_sky_mocks.py  mapNuker.py
src/galfitools/sky/: GalfitSky.py  Sky.py  SkyDs9.py  SkyRing.py
tests/: A1656-1-3.sbProf.fits  box.reg  cold.gtMakeMask  conftest.py  ds9.getStar.reg  ds9.mge2galfit.reg  ds9.sbProf.reg  ds9.sky.reg  galfit.1ser  galfit.3ser  galfit.barsize  galfit.galout  galfit.initgal  mask.mge.fits  mask.sbProf.fits  maskds9.reg  maskscii.txt  msehead.txt  ngc3344J.mge2galfit.fits  ngc4342.sky.fits  skyDs9.reg  skyring.reg  star.gal  star.reg  test_galin.py  test_galout.py  test_maingalin.py  test_maingalout.py  test_mainmge.py  test_mainsim.py  test_mainsky.py  test_mge.py  test_prt.py  test_sim.py  test_sky.py
xy2fits/: xy2fits.md  xy2fits.py
